[package]
name = "aoit"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
clap = { version = "^4", features = ["derive"] }
glob = "^0"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
sevenz-rust={version="^0", features=["compress"]}
sha2 = "^0"
log = "^0"
env_logger = "^0"
