[package]
name = "aoit"
version = "0.1.7"
edition = "2021"
authors = ["Riko Naka <xxy1836@gmail.com>"]
license = "GPL-3.0-only"
description = "Apt offline installation tool (support `Debian` family distribution only)."
readme = "README.md"
homepage = "https://github.com/rikonaka/aoit-rs"
repository = "https://github.com/rikonaka/aoit-rs"
keywords = ["apt", "debian", "offline"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
clap = { version = "^4", features = ["derive"] }
glob = "^0"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
sevenz-rust={version="^0", features=["compress"]}
sha2 = "^0"
log = "^0"
env_logger = "^0"
